Made visual changes and fixed highscore list

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="nav">
                 <!-- <button onclick="prevQues()" class="prev-btn" style="display: none;">Previous</button> -->
-                <button onclick="nextClick()" style="margin-left: auto;" class="nxt-btn">Next</button>
+                <button onclick="nextClick()" style="margin-left: auto; margin-right: 10px; margin-bottom: 10px;" class="nxt-btn">Check</button>
             </div>
         </div>
     </section>
