Added instant answer check

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section class="start-screen">
             <div class="content-box">
                 <h1 id='start-heading'>Quiz Master</h1>
-                <button class="start-btn" onclick="startQuiz(); nextClick();">Start Quiz</button>
+                <button class="start-btn" onclick="startQuiz();">Start Quiz</button>
                 <br>
                 <button class="start-btn" onclick="viewHighScore(); rankList();">🏆 View High Scores</button>
         </div>
@@ -28,6 +28,7 @@
             </div>
             <div class="nav">
                 <!-- <button onclick="prevQues()" class="prev-btn" style="display: none;">Previous</button> -->
+                 <div class="insta-ans"></div>
                 <button onclick="nextClick()" style="margin-left: auto; margin-right: 10px; margin-bottom: 10px;" class="nxt-btn">Check</button>
             </div>
         </div>
