Made the timer run from 0 after restart

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="content-box-quiz-screen">
             <div class="header">
                 <div class="question-no">Question No. </div>
-                <div class="timer">Time Elapsed - </div>
+                <div class="timer">Time Elapsed - 0:0</div>
             </div>
             <div class="question-canvas">
                 <div class="question"></div>
